Week-4 Container Orchestration/day-09-capstone/shortlink-broken/10-postgres.yaml
apiVersion: v1
kind: Service
metadata: { name: postgres, namespace: shortlink, labels: { app: postgres } }
spec:
  clusterIP: None
  selector: { app: postgres }
  ports: [{ port: 5432, targetPort: 5432 }]
---
apiVersion: apps/v1
kind: StatefulSet
metadata: { name: postgres, namespace: shortlink }
spec:
  serviceName: postgres
  replicas: 1
  selector: { matchLabels: { app: postgres } }
  template:
    metadata: { labels: { app: postgres } }
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports: [{ containerPort: 5432 }]
          volumeMounts: [{ name: data, mountPath: /var/lib/postgresql/data }]
          readinessProbe:
            exec: { command: ["pg_isready", "-U", "postgres"] }
            initialDelaySeconds: 5
  volumeClaimTemplates:
    - metadata: { name: data }
      spec:
        storageClassName: fast-ssd          # BUG: no such StorageClass
        accessModes: ["ReadWriteOnce"]
        resources: { requests: { storage: 500Mi } }
