Week-4 Container Orchestration/day-09-capstone/shortlink-broken/50-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: { name: shortlink, namespace: shortlink }
spec:
  ingressClassName: nginx
  rules:
    - host: shortlink.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: frontend, port: { number: 80 } } }
    - host: api.shortlink.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: api, port: { number: 9999 } } }   # BUG 7: api Service is on 80
